WIP: Add deep neural nets src and unit test directories. Edit CMakeLists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,13 @@ APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched/impl)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 
+#Include dnn
+
+SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/dnn)
+APPEND_GLOB(HEADERS ${DIR}/*.hpp)
+SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/dnn/impl)
+APPEND_GLOB(HEADERS ${DIR}/*.hpp)
+
 #Include Common
 
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/common)
