WIP: implement 2D convolution and test in new dnn directory

--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -5,6 +5,9 @@ INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/blas)
 INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/blas)
 
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/dnn)
+INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/dnn)
+
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/sparse)
 INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/sparse)
 
