WIP: implementation of conv2d with specializations and test

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,7 @@ APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/blas/impl)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 
-#Include Sparse
+#Include sparse
 
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/sparse)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
@@ -37,18 +37,18 @@ APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/graph/impl)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 
-#Include batched
-
-SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched)
-APPEND_GLOB(HEADERS ${DIR}/*.hpp)
-SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched/impl)
-APPEND_GLOB(HEADERS ${DIR}/*.hpp)
-
 #Include dnn
 
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/dnn)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/dnn/impl)
+APPEND_GLOB(HEADERS ${DIR}/*.hpp)
+
+#Include batched
+
+SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched)
+APPEND_GLOB(HEADERS ${DIR}/*.hpp)
+SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched/impl)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 
 #Include Common
