--- a/Makefile.kokkos-kernels
+++ b/Makefile.kokkos-kernels
@@ -47,9 +47,10 @@ KOKKOSKERNELSCOMMON_CPPFLAGS= -I$(KOKKOSKERNELS_PATH)/src/common
 KOKKOSBLAS_CPPFLAGS= -I$(KOKKOSKERNELS_PATH)/src/blas -I$(KOKKOSKERNELS_PATH)/src/blas/impl
 KOKKOSSPARSE_CPPFLAGS= -I$(KOKKOSKERNELS_PATH)/src/sparse -I$(KOKKOSKERNELS_PATH)/src/sparse/impl
 KOKKOSGRAPH_CPPFLAGS= -I$(KOKKOSKERNELS_PATH)/src/graph -I$(KOKKOSKERNELS_PATH)/src/graph/impl 
+KOKKOSDNN_CPPFLAGS= -I$(KOKKOSKERNELS_PATH)/src/dnn -I$(KOKKOSKERNELS_PATH)/src/dnn/impl 
 KOKKOSBATCHED_CPPFLAGS= -I$(KOKKOSKERNELS_PATH)/src/batched 
 
-KOKKOSKERNELS_CPPFLAGS = -I$(KOKKOSKERNELS_PATH)/src -I$(KOKKOSKERNELS_PATH)/src/impl -I$(KOKKOSKERNELS_PATH)/src/impl/tpls $(KOKKOSSPARSE_CPPFLAGS) $(KOKKOSGRAPH_CPPFLAGS) $(KOKKOSKERNELUTILS_CPPFLAGS) $(KOKKOSBLAS_CPPFLAGS) $(KOKKOSBATCHED_CPPFLAGS) $(KOKKOSKERNELSCOMMON_CPPFLAGS)
+KOKKOSKERNELS_CPPFLAGS = -I$(KOKKOSKERNELS_PATH)/src -I$(KOKKOSKERNELS_PATH)/src/impl -I$(KOKKOSKERNELS_PATH)/src/impl/tpls $(KOKKOSSPARSE_CPPFLAGS) $(KOKKOSGRAPH_CPPFLAGS) $(KOKKOSDNN_CPPFLAGS) $(KOKKOSKERNELUTILS_CPPFLAGS) $(KOKKOSBLAS_CPPFLAGS) $(KOKKOSBATCHED_CPPFLAGS) $(KOKKOSKERNELSCOMMON_CPPFLAGS)
 
 KOKKOSKERNELS_LINK_DEPENDS = $(KOKKOSKERNELS_INTERNAL_LIBRARY)
 
