WIP: implementation of conv2d with specializations and test

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,7 @@ IF (KOKKOSKERNELS_ENABLE_TPL_BLAS OR KOKKOSKERNELS_ENABLE_TPL_MKL)
   APPEND_GLOB(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/impl/tpls/KokkosBlas_Host_tpl.cpp)
 ENDIF()
 
-#Include Sparse
+#Include sparse
 
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/sparse)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
@@ -43,18 +43,18 @@ APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/graph/impl)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 
-#Include batched
-
-SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched)
-APPEND_GLOB(HEADERS ${DIR}/*.hpp)
-SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched/impl)
-APPEND_GLOB(HEADERS ${DIR}/*.hpp)
-
 #Include dnn
 
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/dnn)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/dnn/impl)
+APPEND_GLOB(HEADERS ${DIR}/*.hpp)
+
+#Include batched
+
+SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched)
+APPEND_GLOB(HEADERS ${DIR}/*.hpp)
+SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR}/batched/impl)
 APPEND_GLOB(HEADERS ${DIR}/*.hpp)
 
 #Include Common
