--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -5,14 +5,14 @@ INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/blas)
 INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/blas)
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/dnn)
-INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/dnn)
-
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/sparse)
 INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/sparse)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/graph)
 INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/graph)
+
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/dnn)
+INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/dnn)
 
 #INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/batched)
 #INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT_SOURCE_DIR}/batched)
@@ -72,11 +72,21 @@ IF (Kokkos_ENABLE_Cuda)
     NUM_MPI_PROCS 1
     TESTONLYLIBS kokkoskernels_gtest
   )
-  
+ 
+  APPEND_GLOB(CUDA_DNN_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cuda/Test_Cuda_DNN*.cpp)
+
+  TRIBITS_ADD_EXECUTABLE_AND_TEST(
+    dnn_cuda
+    SOURCES
+      Test_Main.cpp
+      ${CUDA_DNN_SOURCES}
+    NUM_MPI_PROCS 1
+    TESTONLYLIBS kokkoskernels_gtest
+  )
+
   #currently float 128 test is not working. So common tests are explicitly added.  
   APPEND_GLOB(CUDA_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cuda/Test_Cuda_Common_ArithTraits.cpp)
   
-
   TRIBITS_ADD_EXECUTABLE_AND_TEST(
     common_cuda
     SOURCES
@@ -130,7 +140,18 @@ IF (Kokkos_ENABLE_OpenMP)
     NUM_MPI_PROCS 1
     TESTONLYLIBS kokkoskernels_gtest
   )
-  
+
+  APPEND_GLOB(OPENMP_DNN_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/openmp/Test_OpenMP_DNN*.cpp)
+
+  TRIBITS_ADD_EXECUTABLE_AND_TEST(
+    dnn_openmp
+    SOURCES
+      Test_Main.cpp
+      ${OPENMP_DNN_SOURCES}
+    NUM_MPI_PROCS 1
+    TESTONLYLIBS kokkoskernels_gtest
+  )
+ 
   APPEND_GLOB(OPENMP_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/openmp/Test_OpenMP_Common_ArithTraits.cpp)
 
   TRIBITS_ADD_EXECUTABLE_AND_TEST(
@@ -164,7 +185,7 @@ IF (Kokkos_ENABLE_Serial)
     TESTONLYLIBS kokkoskernels_gtest
     )
     
-   APPEND_GLOB(SERIAL_SPARSE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/serial/Test_Serial_Sparse*.cpp)
+  APPEND_GLOB(SERIAL_SPARSE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/serial/Test_Serial_Sparse*.cpp)
 
   TRIBITS_ADD_EXECUTABLE_AND_TEST(
     sparse_serial
@@ -185,7 +206,18 @@ IF (Kokkos_ENABLE_Serial)
     NUM_MPI_PROCS 1
     TESTONLYLIBS kokkoskernels_gtest
   )
-  
+
+  APPEND_GLOB(SERIAL_DNN_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/serial/Test_Serial_DNN*.cpp)
+
+  TRIBITS_ADD_EXECUTABLE_AND_TEST(
+    dnn_serial
+    SOURCES
+      Test_Main.cpp
+      ${SERIAL_DNN_SOURCES}
+    NUM_MPI_PROCS 1
+    TESTONLYLIBS kokkoskernels_gtest
+  )
+ 
   APPEND_GLOB(SERIAL_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/serial/Test_Serial_Common_ArithTraits.cpp)
 
   TRIBITS_ADD_EXECUTABLE_AND_TEST(
@@ -236,7 +268,17 @@ IF (Kokkos_ENABLE_Pthread)
     TESTONLYLIBS kokkoskernels_gtest
   )
   
-  
+  APPEND_GLOB(THREADS_DNN_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/threads/Test_Threads_DNN*.cpp)
+
+  TRIBITS_ADD_EXECUTABLE_AND_TEST(
+    dnn_threads
+    SOURCES
+      Test_Main.cpp
+      ${THREADS_DNN_SOURCES}
+    NUM_MPI_PROCS 1
+    TESTONLYLIBS kokkoskernels_gtest
+  )
+
   APPEND_GLOB(THREADS_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/threads/Test_Threads_Common_ArithTraits.cpp)
 
   TRIBITS_ADD_EXECUTABLE_AND_TEST(
